Experimental rewrite of Stop Words administration screen. Feedback welcomed.

--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
@@ -33,7 +33,7 @@ th[scope=row] {
 	text-align : right;
 }
 
-input[type=submit], input[type=button] {
+input[type=submit], input[type=button], input[type=reset] {
 	background-color : #6699cc;
 	color : #FFFFFF;
 	font-size : 1em;
@@ -44,3 +44,10 @@ tr.highlight td, tr.highlight th {
 	background-color : #EEEEEE;
 }
 
+#admin_stopwords_select UL {
+   width: 600px;
+}
+
+#admin_stopwords_select UL LI {
+   white-space: nowrap;
+}
