--- a/koha-tmpl/intranet-tmpl/prog/en/admin/itemtypes.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/itemtypes.tmpl
@@ -1,8 +1,30 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration: 
-<!-- TMPL_IF name="add_form" --><!-- TMPL_IF name="itemtype" -->Modify item type '<!-- TMPL_VAR name="itemtype" -->'<!-- TMPL_ELSE -->Add item type<!-- /TMPL_IF --><!-- /TMPL_IF -->
-<!-- TMPL_IF name="delete_confirm" --><!-- TMPL_IF name="total" -->Cannot Delete Item Type '<!-- TMPL_VAR name="itemtype" -->'<!-- TMPL_ELSE -->Delete Item Type '<!-- TMPL_VAR name="itemtype" -->'?<!-- /TMPL_IF --><!-- /TMPL_IF -->
-<!-- TMPL_IF name="delete_confirmed" -->Data Deleted<!-- /TMPL_IF -->
-<!-- TMPL_IF name="else" -->Item Types Administration<!-- /TMPL_IF -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+Koha -- System Administration: 
+
+<!-- TMPL_IF name="add_form" -->
+  <!-- TMPL_IF name="itemtype" -->
+Modify item type '<!-- TMPL_VAR name="itemtype" -->'
+  <!-- TMPL_ELSE -->
+Add item type
+  <!-- /TMPL_IF -->
+<!-- /TMPL_IF -->
+
+<!-- TMPL_IF name="delete_confirm" -->
+  <!-- TMPL_IF name="total" -->
+Cannot Delete Item Type '<!-- TMPL_VAR name="itemtype" -->'
+  <!-- TMPL_ELSE -->
+Delete Item Type '<!-- TMPL_VAR name="itemtype" -->'?
+  <!-- /TMPL_IF -->
+<!-- /TMPL_IF -->
+
+<!-- TMPL_IF name="delete_confirmed" -->
+Data Deleted
+<!-- /TMPL_IF -->
+
+<!-- TMPL_IF name="else" -->
+Item Types Administration
+<!-- /TMPL_IF -->
+
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
@@ -10,40 +32,133 @@
 
 <!-- TMPL_IF name="add_form" -->
 
-	<form action="<!-- TMPL_VAR name="script_name" -->" name="Aform" method="post">
-		<input type="hidden" name="op" value="add_validate" />
-		<input type="hidden" name="checked" value="0" />
+<form action="<!-- TMPL_VAR name="script_name" -->" name="Aform" method="post">
+  <feldset>
+    <legend>
+  <!-- TMPL_IF name="itemtype" -->
+      Modify item type
+  <!-- TMPL_ELSE -->
+      Add item type
+  <!-- /TMPL_IF -->
+    </legend>
+
+    <input type="hidden" name="op" value="add_validate" />
+    <input type="hidden" name="checked" value="0" />
 		
-		<table>
-		<caption><!-- TMPL_IF name="itemtype" -->
-		Modify item type
-	<!-- TMPL_ELSE -->
-		Add item type
-	<!-- /TMPL_IF --></caption>
-			<!-- TMPL_IF name="itemtype" -->
-				<tr><th><label for="">Item type</label></th><td><input type="hidden" name="itemtype" value="<!-- TMPL_VAR name="itemtype" -->" /><!-- TMPL_VAR name="itemtype" --></td></tr>
-			<!-- TMPL_ELSE -->
-				<tr><th><label for="">Item type</label></th><td><input type="text" name="itemtype" size="6" maxlength="4" onblur="toUC(this)" /></td></tr>
-			<!-- /TMPL_IF -->
-			<tr>
-				<th><label for="description">Description</label></th>
-				<td><input type="text" id="description" name="description" size="48" maxlength="80" value="<!-- TMPL_VAR name="description" escape="HTML" -->" />&nbsp;</td>
-			</tr>
-			<tr>
-				<th><label for="notforloan">Not for loan</label></th>
-				<td><input type="checkbox" id="notforloan" name="notforloan"<!-- TMPL_IF name="notforloan" --> checked="checked"<!-- /TMPL_IF --> value="1"> (if checked, no item of this type can be issued. If not checked, every item of this type can be issued unless notforloan is set for a specific item)</td>
-			</tr>
-			<tr>
-			<tr>
-				<th><label for="renewalsallowed">Renewals</label></th>
-				<td><input type="text" id="renewalsallowed" name="renewalsallowed" size="3" maxlength="3" value="<!-- TMPL_IF name="renewalsallowed" --><!-- TMPL_VAR NAME="renewalsallowed" --><!-- /TMPL_IF -->" value="1" /><!-- Display for NPL //<input type="hidden" name="rentalcharge" value="0" /> //Display for NPL --></td>
-			</tr>
-<!-- Hide from NPL--> 			<tr>
-				<th><label for="rentalcharge">Rental charge</label></th>
-				<td><input type="text" id="rentalcharge" name="rentalcharge" size="10" value="<!-- TMPL_VAR name="rentalcharge" -->" /></td>
-			</tr><!--  /Hide from NPL -->
-		</table><input type="button" value="Save Changes" onclick="Check(this.form)" /> <input type="button" value="Cancel" onclick="history.back();" />
-	</form>
+    <table>
+  <!-- TMPL_IF name="itemtype" -->
+      <tr>
+        <th>
+          <label for="">Item type</label>
+        </th>
+        <td>
+          <input type="hidden" name="itemtype" value="<!-- TMPL_VAR name="itemtype" -->" />
+          <!-- TMPL_VAR name="itemtype" -->
+        </td>
+      </tr>
+  <!-- TMPL_ELSE -->
+      <tr>
+        <th>
+          <label for="">Item type</label>
+        </th>
+        <td>
+          <input type="text" name="itemtype" size="6" maxlength="4" onblur="toUC(this)" />
+        </td>
+      </tr>
+  <!-- /TMPL_IF -->
+      <tr>
+        <th>
+          <label for="description">Description</label>
+        </th>
+	<td>
+          <input type="text" id="description" name="description" size="48" maxlength="80"
+                value="<!-- TMPL_VAR name="description" escape="HTML" -->" />
+        </td>
+      </tr>
+      <tr>
+        <th>Image</th>
+        <td>
+          <p>
+  <!-- TMPL_LOOP NAME="IMAGESLOOP" -->
+            <label>
+    <!-- TMPL_IF name="checked" -->
+              <input type="radio" name="image" value="<!-- TMPL_VAR name="KohaImage" -->" checked="checked" />
+    <!-- TMPL_ELSE -->
+              <input type="radio" name="image" value="<!-- TMPL_VAR name="KohaImage" -->" />
+    <!-- /TMPL_IF -->
+              <img src="<!-- TMPL_VAR name="KohaImageSrc" -->">
+            </label>
+  <!-- /TMPL_LOOP -->
+          </p>
+          <hr />
+          <p>
+            <label>
+  <!-- TMPL_IF name="remote_image" -->
+            <input type="radio" id="remote_image_check" name="image" value="remoteImage" checked="checked" />
+  <!-- TMPL_ELSE -->
+            <input type="radio" id="remote_image_check" name="image" value="remoteImage" />
+  <!-- /TMPL_IF -->
+            remote image
+            </label>
+            <input type="text"
+                   name="remoteImage"
+                   size="48"
+              maxlength="200"
+                  value="<!-- TMPL_VAR name="remote_image" -->"
+            onmousedown="document.getElementById('remote_image_check').checked = true;"
+            />
+            </label>
+  <!-- TMPL_IF name="remote_image" -->
+            <img src="<!-- TMPL_VAR name="remote_image" -->" />
+  <!-- /TMPL_IF -->
+          </p>
+          <hr />
+          <p>
+            <label><input type="radio" name="image" value="removeImage" /> remove image</label>
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <th>
+          <label for="notforloan">Not for loan</label>
+        </th>
+        <td>
+          <input type="checkbox" id="notforloan" name="notforloan"
+  <!-- TMPL_IF name="notforloan" -->
+              checked="checked"
+  <!-- /TMPL_IF -->
+                value="1">
+          (if checked, no item of this type can be issued. If not checked, every item of this type can be issued unless notforloan is set for a specific item)
+        </td>
+      </tr>
+      <tr>
+        <th>
+          <label for="renewalsallowed">Renewals</label>
+        </th>
+        <td>
+          <input type="text" id="renewalsallowed" name="renewalsallowed" size="3" maxlength="3" value="
+  <!-- TMPL_IF name="renewalsallowed" -->
+          <!-- TMPL_VAR NAME="renewalsallowed" -->
+  <!-- /TMPL_IF -->" value="1" /><!-- Display for NPL //<input type="hidden" name="rentalcharge" value="0" /> //Display for NPL -->
+        </td>
+      </tr>
+<!-- Hide from NPL-->
+      <tr>
+        <th>
+          <label for="rentalcharge">Rental charge</label>
+        </th>
+        <td>
+          <input type="text" id="rentalcharge" name="rentalcharge" size="10" value="<!-- TMPL_VAR name="rentalcharge" -->" />
+        </td>
+      </tr><!--  /Hide from NPL -->
+    </table>
+
+    <p id="action">
+      <input type="button" value="Save Changes" onclick="Check(this.form)" />
+      <input type="button" value="Cancel" onclick="history.back();" />
+    </p>
+  </fieldset>
+</form>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF name="delete_confirm" -->
@@ -70,44 +185,54 @@
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF name="else" -->
+<h2>Item Types Administration</h2>
 <table>
-<caption>Item Types Administration</caption>
-	<tr>
-		<th>Code</th>
-		<th>Description</th>
-		<th>Not for Loan</th>
-		<th>Renewable</th>
-		<th>Charge</th>
-		<th>Edit</th>
-		<th>Delete</th>
-	</tr>
-	<!-- TMPL_LOOP name="loop" -->
-		<!-- TMPL_IF NAME="toggle" --><tr><!-- TMPL_ELSE --><tr class="highlight"><!-- /TMPL_IF -->
-			<td><a href="<!-- TMPL_VAR name="script_name" -->?op=add_form&amp;itemtype=<!-- TMPL_VAR name="itemtype" escape="HTML" -->"><!-- TMPL_VAR name="itemtype" --></a></td>
-			<td><!-- TMPL_VAR name="description" --></td>
-			<td><!-- TMPL_IF NAME="notforloan" -->Yes<!-- TMPL_ELSE -->&nbsp;<!-- /TMPL_IF --></td>
-			<td><!-- TMPL_IF NAME="renewalsallowed" -->
-						<!-- TMPL_VAR name="renewalsallowed" --> time(s)
-					<!-- TMPL_ELSE -->
-						No
-					<!-- /TMPL_IF -->
-			</td>
-		<td><!-- TMPL_UNLESS name="notforloan" --><!-- TMPL_VAR NAME="rentalcharge" --><!-- /TMPL_UNLESS --></td>
-			<td><form action="<!-- TMPL_VAR name="script_name" -->" method="get"><input type="hidden" name="op" value="add_form" /><input type="hidden" name="itemtype" value="<!-- TMPL_VAR name="itemtype" escape="HTML" -->" /><input type="submit" value="Edit" /></form></td>
-			<td><form action="<!-- TMPL_VAR name="script_name" -->" method="get"><input type="hidden" name="op" value="delete_confirm" /><input type="hidden" name="itemtype" value="<!-- TMPL_VAR name="itemtype" escape="HTML" -->" /><input type="submit" value="Delete" /></form></td>
-		</tr>
-	<!-- /TMPL_LOOP -->
+  <tr>
+    <th>image</th>
+    <th>Code</th>
+    <th>Description</th>
+    <th>Not for Loan</th>
+    <th>Renewable</th>
+    <th>Charge</th>
+    <th>Actions</th>
+  </tr>
+  <!-- TMPL_LOOP name="loop" -->
+    <!-- TMPL_IF NAME="toggle" -->
+  <tr>
+    <!-- TMPL_ELSE -->
+  <tr class="highlight">
+    <!-- /TMPL_IF -->
+    <td><img src="<!-- TMPL_VAR name="imageurl" -->" /></td>
+    <td>
+      <a href="<!-- TMPL_VAR name="script_name" -->?op=add_form&amp;itemtype=<!-- TMPL_VAR name="itemtype" escape="HTML" -->">
+        <!-- TMPL_VAR name="itemtype" -->
+      </a>
+    </td>
+    <td><!-- TMPL_VAR name="description" --></td>
+    <td><!-- TMPL_IF NAME="notforloan" -->Yes<!-- TMPL_ELSE -->&nbsp;<!-- /TMPL_IF --></td>
+    <td>
+    <!-- TMPL_IF NAME="renewalsallowed" -->
+      <!-- TMPL_VAR name="renewalsallowed" --> time(s)
+    <!-- TMPL_ELSE -->
+      No
+    <!-- /TMPL_IF -->
+    </td>
+    <td>
+    <!-- TMPL_UNLESS name="notforloan" -->
+      <!-- TMPL_VAR NAME="rentalcharge" -->
+    <!-- /TMPL_UNLESS -->
+    </td>
+    <td>
+      <a href="<!-- TMPL_VAR name="script_name" -->?op=add_form&amp;itemtype=<!-- TMPL_VAR name="itemtype" escape="HTML" -->">Edit</a>
+      <a href="<!-- TMPL_VAR name="script_name" -->?op=delete_confirm&amp;itemtype=<!-- TMPL_VAR name="itemtype" escape="HTML" -->">Delete</a>
+    </td>
+  </tr>
+  <!-- /TMPL_LOOP -->
 </table>
 
-<form action="<!-- TMPL_VAR name="script_name" -->" method="post">
-<p><input type="hidden" name="op" value="add_form" />
+<div class="paginationBar"><!-- TMPL_VAR NAME="pagination_bar" --></div>
 
-<!-- TMPL_IF name="previous" --><input type="button" onclick="location.href='<!-- TMPL_VAR name="previous" -->'; return false;" value="&lt;&lt; Previous Page" /><!-- /TMPL_IF -->
-
-<input type="submit" value="Add Item Type" />
-
-<!-- TMPL_IF name="next" --><input type="button" onclick="location.href='<!-- TMPL_VAR name="next" -->'; return false;" value="Next Page &gt;&gt;" /><!-- /TMPL_IF -->
-</p></form>
+<p><a href="<!-- TMPL_VAR name="script_name" -->?op=add_form">Add Item type</a></p>
 <!-- /TMPL_IF -->
 
 
