--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -177,7 +177,12 @@
 			</a>
 		</td>
 		<td><!-- TMPL_VAR NAME="date_due" --></td>
-		<td><!-- TMPL_VAR NAME="itemtype" --></td>
+		<td>
+                  <!-- TMPL_VAR NAME="itemtype_description" -->
+                  <!-- TMPL_IF NAME="itemtype_image" -->
+                  <img src="<!-- TMPL_VAR NAME="itemtype_image" -->" />
+                  <!-- /TMPL_IF -->
+                </td>
 		<td><!-- TMPL_VAR NAME="charge" --></td>
 		<td><!-- TMPL_VAR NAME="replacementprice" --></td>
 		<td>
