Updated with spine label url.

--- a/koha-tmpl/intranet-tmpl/npl/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/intranet-main.tmpl
@@ -34,7 +34,7 @@
 </dl>
 <dl>
 <!-- Hide from NPL --><dt><a href="/cgi-bin/koha/admin-home.pl">Koha Administration</a></dt>
-<dd><ul><li><a href="/cgi-bin/koha/admin-home.pl">System Adminstration Home</a></li> <li><a href="/cgi-bin/koha/admin/systempreferences.pl">System Preferences</a></li> <li><a href="/cgi-bin/koha/barcodes/barcodes.pl">Barcodes generator</a></li> <li><a href="/cgi-bin/koha/admin/aqbookfund.pl">Book funds</a></li> <li><a href="/cgi-bin/koha/import/breeding.pl">Import to reservoir</a></li></ul></dd> <!-- /Hide from NPL -->
+<dd><ul><li><a href="/cgi-bin/koha/admin-home.pl">System Adminstration Home</a></li> <li><a href="/cgi-bin/koha/admin/systempreferences.pl">System Preferences</a></li> <li><a href="/cgi-bin/koha/barcodes/barcodes.pl">Barcodes generator</a></li> <li><a href="/cgi-bin/koha/admin/aqbookfund.pl">Book funds</a></li> <li><a href="/cgi-bin/koha/import/breeding.pl">Import to reservoir</a></li><li><a href="/cgi-bin/koha/label-home.pl">Spine and Barcode Labels</a></li></ul></dd> <!-- /Hide from NPL -->
 </dl>
 <br clear="both" /></div>
             
