Updated with spine label url.

--- a/koha-tmpl/intranet-tmpl/npl/en/parameters/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/parameters/admin-home.tmpl
@@ -102,6 +102,11 @@
 		<td>the barcode generator deals with generating barcodes for items you acquire
 		</td>
 	</tr>
+        <tr>
+                <th><a href="/cgi-bin/koha/label-home.pl">Spine and Barcode label generator</a></th>
+                <td>This is a newer barcode generator, that also generates spine labels
+                </td>
+        </tr>
 </table>
 </div>
 </div>
